<resources>
    <string name="app_name">PersistingDataActivity</string>
    <string name="do_something">Do something</string>
    <string name="share_data">Share Data</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="go_to_second">Go to second</string>
    <string name="go_to_second_for_result">Go to second for result</string>
    <string name="save_to_shared_prefs">Save to shared prefs</string>
</resources>
